force-app/main/default/objects/Payment_Methods__c/Payment_Methods__c.object-meta.xml
<CustomObject>
    <description>Ways that a customer can pay for their delivery</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Payment  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>