force-app/main/default/objects/Payment_Methods__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <description>Credit card number</description>
    <label>Card Number</label>
    <length>16</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>