force-app/main/default/objects/Payment_Methods__c/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate which payment method is the customer&apos;s default.</description>
    <label>Default Payment Method</label>
    <type>Checkbox</type>
</CustomField>