force-app/main/default/objects/Payment_Methods__c/fields/Expiry_Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Month_and_Year__c</fullName>
    <description>Expiry month and year for the credit card: MM/YY</description>
    <inlineHelpText>mm/yy</inlineHelpText>
    <label>Expiry Month and Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>