force-app/main/default/objects/Payment_Methods__c/fields/Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Type__c</fullName>
    <description>Credit card method type</description>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>